Fixing z-index for OSD buttons, fixing styling on X for nav menu.

--- a/src/components/SideMenu/SideMenu.scss
+++ b/src/components/SideMenu/SideMenu.scss
@@ -193,4 +193,8 @@
             }
         }
     }
+
+    &__close {
+        top: 0 !important;
+    }
 }
