--- a/src/components/Zoom/zoom.scss
+++ b/src/components/Zoom/zoom.scss
@@ -23,7 +23,7 @@
     position: absolute;
     
     bottom: 10px;
-    z-index: 9;
+    z-index: 4;
 
     width: 100%;
     display: flex;
